--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@faker-js/faker": "^9.0.3",
     "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "globals": "^15.1.0",
+    "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "yarn": "^1.22.22"
   }
 }
